# sunds

./: README.md  pyproject.toml
.github/workflows/: publish.yml  pytest.yml  pytest_and_autopublish.yml
docs/: intro.md  nerf.md
sunds/: README.md  __init__.py  __init__.pyi  conftest.py  typing.py
sunds/.github/workflows/: publish.yml  pytest.yml
sunds/core/: __init__.py  dataset_builder.py  dataset_semantic_types.py  load_utils.py  load_utils_test.py  spec_dict.py  spec_dict_test.py  specs.py  specs_base.py  specs_utils.py  tasks.py
sunds/core/np_geometry/: __init__.py  isometry.py  isometry_test.py
sunds/core/tf_geometry/: __init__.py  cameras.py  cameras_test.py  isometry.py  isometry_test.py  rays.py  rays_test.py
sunds/datasets/: __init__.py
sunds/datasets/clevr3d/: builder_utils.py  checksums.tsv  frames_builder.py  utils.py
sunds/datasets/kubric/: README.md  base.py  frames_builder.py  multi_shapenet.py  utils.py
sunds/datasets/nerf_synthetic/: builder_utils.py  checksums.tsv  frames_builder.py  frames_builder_test.py  scenes_builder.py  scenes_builder_test.py
sunds/datasets/nerf_synthetic/dummy_data/nerf_synthetic/lego/: transforms_test.json
sunds/docs/: intro.md  nerf.md
sunds/features/: __init__.py  normal.py  normal_test.py
sunds/tasks/: __init__.py  boundaries_utils.py  boundaries_utils_test.py  default_tasks.py  default_tasks_test.py  nerf.py  nerf_test.py
sunds/utils/: __init__.py  file_utils.py  py_utils.py  py_utils_test.py  tf_utils.py  tf_utils_test.py  tqdm_utils.py
