[project]
name = "sunds"
version = "0.4.0"
description = "Datasets for scene understanding and neural rendering."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [{name = "Sunds team", email="sunds@google.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    # Note: Python and license automatically added by some tools
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["datasets", "scene-understanding", "neural rendering", "nerf"]

dependencies = [
    "absl-py",
    "etils[etqdm]",
    "numpy>=1.17",
    # We do not explicitly add tensorflow as deps to allow users
    # choose between `tensorflow` / `tf-nightly`
    # tensorflow = ">=2.4"
    "tensorflow_datasets>=4.4",
    "typing_extensions",
]

[project.urls]
homepage = "https://github.com/google-research/sunds"
repository = "https://github.com/google-research/sunds"

[project.optional-dependencies]
dev = [
    "pytest>=3.4",
    "pytest-xdist",
    # Optional deps required for specific datasets
    "pillow",
]

[build-system]
requires = ["flit_core >=3.5,<4"]
build-backend = "flit_core.buildapi"
